tests/build/cases/widget_new/missing_field_all_multi.stderr
error[E0277]: the trait bound `(): IntoVar<LinearGradientAxis>` is not satisfied
 --> cases/widget_new/missing_field_all_multi.rs:9:31
  |
9 |         background_gradient = { }
  |         -------------------   ^^^ the trait `IntoVar<LinearGradientAxis>` is not implemented for `()`
  |         |
  |         required by a bound introduced by this call
  |
  = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `zero_ui::properties::background_gradient::background_gradient`
 --> $WORKSPACE/zero-ui/src/properties/visual.rs
  |
  | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
  |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `background_gradient::background_gradient`

error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> cases/widget_new/missing_field_all_multi.rs:9:9
   |
5  |       let _ = Wgt! {
   |  _____________-
6  | |         // background_gradient has two fields
7  | |         // this is interpreted as an unnamed assign `{ }` is the value
8  | |         // and the second value is missing
9  | |         background_gradient = { }
   | |         ^^^^^^^^^^^^^^^^^^^
10 | |     };
   | |_____- an argument is missing
   |
note: method defined here
  --> $WORKSPACE/zero-ui/src/properties/visual.rs
   |
   | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
   |        ^^^^^^^^^^^^^^^^^^^
help: provide the argument
   --> $WORKSPACE/zero-ui/src/widgets.rs
    |
    | background_gradient({ }, /* stops */)
    |
